Add region filter for use case and activity